# zome-mere-memory

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  default.nix  devhub.json  flake.nix  package-lock.json  package.json  pkgs.nix
.github/: CODEOWNERS
.github/workflows/: all-tests.yml
crates/mere_memory_types/: Cargo.toml  README.md
docs/: Holochain_Version_Map.md
mere_memory/: Cargo.toml
mere_memory/src/: lib.rs  validation.rs
mere_memory_core/: Cargo.toml
mere_memory_types/: Cargo.toml  README.md
mere_memory_types/src/: lib.rs
packs/app/: happ.yaml
packs/app_clonable/: happ.yaml
packs/dna/: dna.yaml
src/: entry_types.rs  handlers.rs  lib.rs  memory_block_handlers.rs  memory_handlers.rs
tests/: package-lock.json  package.json  utils.js
tests/app/: happ.yaml
tests/dna/: dna.yaml
tests/integration/: setup.js  test_api.js  test_basic.js  test_large_memory.js
zomelets/: README.md  package-lock.json  package.json  webpack.config.js
zomelets/src/: index.js
zomes/mere_memory/: Cargo.toml  zome.json
zomes/mere_memory/src/: lib.rs  validation.rs
zomes/mere_memory_api/: Cargo.toml
zomes/mere_memory_api/src/: memory_block_handlers.rs
zomes/mere_memory_csr/: Cargo.toml  zome.json
