[package]
name = "hc_zome_mere_memory"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-zome-mere-memory"
description = ""
readme = "README.md"

[lib]
name = "mere_memory_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
mere_memory = {path = "./mere_memory"}
hdk = "0.4.0-dev.10"
serde = "1"
