[workspace]
members = [
  "crates/*",
  "zomes/*"
]
resolver = "2"

[workspace.dependencies]
hdi = { version = "=0.5.0-dev.17" }
hdk = { version = "=0.4.0-dev.19" }
serde = "1"

[workspace.dependencies.mere_memory_types]
path = "crates/mere_memory_types"

[workspace.dependencies.mere_memory]
path = "zomes/mere_memory"

[workspace.dependencies.mere_memory_api]
path = "zomes/mere_memory_api"
