[package]
name = "mere_memory_core"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/mjbrisebois/hc-zome-mere-memory"
description = ""
readme = "README.md"

[lib]
name = "mere_memory_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = "0.2.0-beta-rc.3"
mere_memory_types = {path = "../mere_memory_types"}
serde = "1"
sha2 = "0"
