[package]
name = "mere_memory_types"
version = "0.88.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-zome-mere-memory"
description = "A Holochain Zome for storing large or small byte values"
readme = "README.md"

[lib]
name = "mere_memory_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "=0.2.7", features = ["custom"] } # temporary fix for compile error in
                                                          # - v0.3.0-beta-dev.8
                                                          # - v0.2.1-beta-rc.0
                                                          # - v0.2.1
hdi = "=0.3.1"
serde = "1"
sha2 = "0"
