[package]
name = "mere_memory_types"
version = "0.94.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-zome-mere-memory"
description = "A Holochain Zome for storing large or small byte values"
readme = "README.md"

[lib]
name = "mere_memory_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = "0.4.0-beta-dev.36"
serde = "1"

[dev-dependencies]
holo_hash = { version = "0.3.0-beta-dev.28", features = ["encoding"] }
