[package]
name = "mere_memory"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-zome-mere-memory"
description = ""
readme = "README.md"

[lib]
name = "mere_memory"
crate-type = ["cdylib", "rlib"]

[dependencies]
mere_memory_types = { workspace = true }
