[package]
name = "mere_memory_csr"
version = "0.102.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-zome-mere-memory"
description = "Official coordinator Mere Memory"
readme = "README.md"

[lib]
name = "mere_memory_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
mere_memory = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
